--- a/📔Notes/2. HTML Notes.md
+++ b/📔Notes/2. HTML Notes.md
@@ -1,9 +1,9 @@
 # [HTML Tutorial](https://www.apnacollege.in/path-player?courseid=sigma-8&unit=6848419f13c68876f906b4f8Unit)
 
-## [What is HTML?](https://blog.hubspot.com/blog/tabid/6307/bid/5847/a-marketer-s-guide-to-html5.aspx)
+## [[html.pdf|What is HTML?]]
 **HTML** stands for **HyperText Markup Language**. HTML is the **foundation of every web page**. It is the **standard language used to create and structure content on the web**. It is **not a case sensitive language**.
 
-### Key Points about HTML
+### Key Points about [HTML5](https://blog.hubspot.com/blog/tabid/6307/bid/5847/a-marketer-s-guide-to-html5.aspx)
 
 - **HyperText**: Refers to the ability to link to other documents or web pages.
 
