--- a/📔Notes/2. HTML Notes.md
+++ b/📔Notes/2. HTML Notes.md
@@ -77,7 +77,7 @@ An **HTML tag** consists of **angle brackets** and a **tag name**. There are **t
 | `<p>`         | Paragraph        | `<p>This is a paragraph.</p>`           | Doesn't count extra spaces                             |
 | `<b>`         | Bold emphasis    | `<b>Important</b>`                      | Also called 'strong'                                   |
 | `<i>`         | Italic emphasis  | `<i>Emphasized</i>`                     | Also called 'em'                                       |
-| `<u>`         | Underline        | `<>Underlined text</u>`                 |                                                        |
+| `<u>`         | Underline        | `<u>Underlined text</u>`                |                                                        |
 | `<br>`        | Line break       | `First line<br>Second line`             | It is a void tag                                       |
 | `<hr>`        | Horizontal line  | `<hr>`                                  | It is a void tag                                       |
 | `<sup>`       | Superscript text | `<sup>This is a superscript text</sup>` | It make the text smaller and lifted                    |
@@ -191,7 +191,7 @@ HTML **attributes** provide **additional information** about HTML elements. They
 | `muted`                   | Automatic mute                  | `<video muted>`                     |                                                    |
 | `src`                     | Source for the video            | `<video src="video.mp4">`           | Also use `<source>` tag inside `<video>` tag       |
 
-### Table attributes
+#### Table attributes
 
 | Attribute | Description                                    | Example                  | Facts                               |
 | --------- | ---------------------------------------------- | ------------------------ | ----------------------------------- |
