--- a/📔Notes/3. CSS Notes.md
+++ b/📔Notes/3. CSS Notes.md
@@ -377,3 +377,299 @@ grid-template-columns: 1fr 2fr;  /* 1 part vs 2 parts */
 
 ---
 
+## Selector in CSS
+In CSS, **selectors** are patterns used to **target HTML elements** that you want to style. They tell the browser **which elements** your CSS rules should apply to.
+
+![[Screenshot From 2025-06-19 21-54-56.png]]
+### Common Types of Selectors
+
+#### 1. Universal Selector
+Selects **all** elements:
+
+```
+* {   
+	margin: 0; 
+}
+```
+
+#### 2. Type Selector
+Selects all elements of a given tag:
+
+```
+h1 {   
+	font-size: 2rem;
+}
+```
+
+#### 3. Class Selector
+Targets elements with a specific class:
+
+CSS:
+```
+.card {   
+	border: 1px solid #ccc; 
+}
+```
+
+HTML:
+```
+<div class="card"></div>
+```
+
+#### 4. ID Selector
+Targets an element with a specific ID:
+
+CSS:
+```
+#main-header {   
+	background-color: black; 
+}
+```
+
+HTML:
+```
+<h1 id="main-header">Title</h1>
+```
+
+#### 5. Group Selector
+Targets multiple selectors at once:
+
+```
+h1, 
+h2, 
+h3 {   
+	font-family: Arial; 
+}
+```
+
+#### 6. Descendant Selector
+Targets elements **inside** other elements:
+
+```
+nav a {   
+	color: green; 
+}
+```
+<mark style="background: #FFF3A3A6;"><b>Note:</b> This selector can jump one or, multiple generation to target child, grandchild or, farther lower generation unlike <i>Child Combinator</i> which can target only direct children.</mark>
+#### 7. Child Combinator (`>`)
+Targets **direct children** only:
+
+```
+ul > li {   
+	list-style: square; 
+}
+```
+
+#### 8. Adjacent Sibling Combinator (`+`)
+Selects an element **immediately after** another:
+
+```
+h1 + p {   
+	margin-top: 0; 
+}
+```
+
+#### 9. [Attribute Selector](https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors)
+Targets elements by their attributes:
+
+```
+input[type="text"] {   
+	border: 1px solid #999; 
+}
+```
+
+### Pseudo Class & Pseudo Element in CSS
+
+#### [Pseudo-Classes (`:`)](https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes)
+A **pseudo-class** is used to define the **special state** of an element. It **doesn't add new content**, but styles the element **based on conditions** like hover, focus, or position in the DOM.
+
+##### 📋 **Syntax:**
+
+```
+selector:pseudo-class {   
+	/* style rules */
+}
+```
+
+##### 🔶 **Common Pseudo-Classes:**
+
+|Pseudo-Class|Description|Example|
+|---|---|---|
+|`:hover`|When the user hovers over an element|`a:hover { color: red; }`|
+|`:focus`|When an element (like input) is focused|`input:focus { border-color: blue; }`|
+|`:checked`|When a checkbox/radio is selected|`input:checked + label { color: green; }`|
+|`:nth-child(n)`|Selects the nth child|`li:nth-child(2) { font-weight: bold; }`|
+|`:first-child`|Selects the first child of a parent|`p:first-child { margin-top: 0; }`|
+|`:last-child`|Selects the last child of a parent|`li:last-child { color: gray; }`|
+|`:not(selector)`|Excludes elements matching the selector|`p:not(.highlight) { color: black; }`|
+
+#### [Pseudo-Elements (`::`)](https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements)
+A **pseudo-element** allows you to **style specific parts** of an element or **insert virtual content** before or after an element — without needing to change the HTML.
+
+##### 📋 **Syntax:**
+
+```
+selector::pseudo-element {   
+	/* style rules */ 
+}
+```
+<mark style="background: #FFF3A3A6;"><b>Note:</b>Modern CSS uses <i>double colons (`::`)</i> to distinguish pseudo-elements from pseudo-classes, but older browsers still support single colons.</mark>
+
+### 🔸 Common Pseudo-Elements:
+
+|Pseudo-Element|Description|Example|
+|---|---|---|
+|`::before`|Inserts content **before** the element|`h1::before { content: "👉 "; }`|
+|`::after`|Inserts content **after** the element|`a::after { content: " 🔗"; }`|
+|`::first-letter`|Styles the **first letter** of text|`p::first-letter { font-size: 200%; }`|
+|`::first-line`|Styles the **first line** of a paragraph|`p::first-line { color: navy; }`|
+|`::selection`|Styles text that is **highlighted by the user**|`::selection { background: yellow; }`|
+
+---
+
+## Cascading & Specificity in CSS
+### What is **Cascading** in CSS?
+The **“C” in CSS** stands for **Cascading**. It describes how **multiple CSS rules are applied in a specific order** of priority when they affect the same element.
+
+#### 📚 Cascade Determines Priority Based On:
+
+1. **Origin**: Browser default, user styles, author styles
+
+2. **Importance**: `!important` overrides everything (use carefully)
+
+3. **Specificity**: How targeted the rule is
+
+4. **Source Order**: Last rule wins if specificity is equal
+
+### 🔶Example:
+
+```css
+/* Rule 1 */
+p {
+  color: blue;
+}
+
+/* Rule 2 */
+#main p {
+  color: red;
+}
+
+/* Rule 3 */
+p {
+  color: green !important;
+}
+```
+<mark style="background: #ADCCFFA6;">Rule 3 wins because it uses `!important`, even though Rule 2 is more specific than Rule 1.</mark>
+
+### 2. What is **Specificity**?
+Specificity is a score that determines which rule wins when multiple rules apply to the same element. The **higher the specificity**, the more "weight" that selector has.
+
+#### 🧮 Specificity Formula:
+CSS calculates specificity as a **four-part value**:
+
+$$
+a (inline styles), b (id), c (.class, [attr], :pseudo-class), d (element, ::pseudo-element)
+$$
+
+#### 🧾 Examples (from lowest to highest):
+
+|Selector|Specificity|Notes|
+|---|---|---|
+|`p`|0,0,0,1|Element selector|
+|`.text`|0,0,1,0|Class selector|
+|`#main`|0,1,0,0|ID selector|
+|`div#main .text`|0,1,1,1|Combination of ID + class + element|
+|`style="..."`|1,0,0,0|Inline style always wins (unless `!important`)|
+
+### `!important` Overrides Everything
+
+If you write:
+
+```css
+p {
+  color: red !important;
+}
+```
+
+It will override even inline styles and highly specific selectors — unless those also have `!important`.
+
+==**Disclaimer:** ⚠️ *Use '! Important' sparingly* – it breaks the natural cascade and can make debugging harder.==
+
+### 🧠 Best Practices
+
+- Prefer **specific classes** over IDs in CSS (more reusable and easier to override).
+
+- Avoid relying heavily on `!important`.
+ 
+- Understand how rules stack and resolve conflicts.
+
+---
+
+## Inheritance in CSS
+**Inheritance** means that some CSS property values are **passed down** (inherited) from a parent element to its children.
+
+Just like in families, **child elements can inherit traits (styles)** from their parents — but **not all traits** are passed down automatically.
+
+### 🔶 How Inheritance Works
+When you apply a property to a parent element, **only certain properties** will automatically be inherited by its children — usually those related to **text and appearance**.
+
+### ✅ Commonly Inherited Properties:
+
+- `color`
+- `font-family`
+- `font-size`
+- `font-style`
+- `font-variant`
+- `font-weight`
+- `letter-spacing`
+- `line-height`
+- `text-align`
+- `visibility`
+- `white-space`
+- `word-spacing`
+
+### ❌ Not Inherited by Default:
+
+- `margin`, `padding`, `border`
+- `width`, `height`
+- `background`, `box-shadow`
+- `position`, `display`
+- `flex`, `grid`, `z-index`
+
+### 🔶Forcing Inheritance
+If a property is **not inherited by default**, you can make it inherit manually:
+
+```css
+div {
+  background-color: inherit;
+}
+```
+
+This tells the child `<div>` to **explicitly copy** the background color from its parent.
+
+### Example:
+
+HTML:
+```html
+<div class="parent">
+  Parent Text
+  <p class="child">Child Text</p>
+</div>
+```
+
+CSS:
+```css
+.parent {
+  color: darkblue;
+  font-family: Arial;
+}
+
+.child {
+  /* Inherits both 'color' and 'font-family' */
+}
+```
+
+Result: Both the parent and child text will appear in **dark blue Arial**.
+
+---
+
