--- a/📔Notes/2. HTML Notes.md
+++ b/📔Notes/2. HTML Notes.md
@@ -262,7 +262,7 @@ In HTML, the `type` attribute of an `<input>` element specifies the kind of data
 ## HTML Boilerplate Code
 This is the **standard format or skeleton** of writing HTML code.
 
-```
+```html
 <!DOCTYPE html>
 
 <html lang="en">
@@ -361,7 +361,7 @@ You can also use numeric codes:
 
 ### 🔁 **Basic Example of Nesting**
 
-```
+```html
 <div>
 	<p>
 		This is a paragraph <strong>with bold text</strong>.
