--- a/📔Notes/3. CSS Notes.md
+++ b/📔Notes/3. CSS Notes.md
@@ -36,7 +36,7 @@ Directly in HTML elements:
 
 - Not practical at all
 
-```
+```html
 <p style="color: blue;">Hello World!</p>
 ```
 
@@ -48,7 +48,7 @@ Within a `<style>` tag in the HTML `<head>` tag:
 
 - Have limited practical use case.
 
-```
+```html
 <head>
 	<style>
         p { 
@@ -67,14 +67,14 @@ In a separate `.css` file, linked in HTML:
 - This method is used in maximum cases.
 
 Inside the `<head>` tag in HTML
-```
+```html
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 ```
 
 In the separate `.css` file
-```
+```css
 p {   
 	color: green; 
 }
@@ -127,36 +127,36 @@ p {
 |   ✅   | `line-height`    | Controls space between lines                       | `line-height: 1.6;`    |
 |   ✅   | `letter-spacing` | Space between characters                           | `letter-spacing: 2px;` |
 |   ✅   | `word-spacing`   | Space between words                                | `word-spacing: 5px;`   |
-|       | `text-indent`    | Indents the first line of text                     | `text-indent: 30px;`   |
+|   ✅   | `text-indent`    | Indents the first line of text                     | `text-indent: 30px;`   |
 
 ### ✨ **Text Decoration and Effects**
 
 | Learn | Property          | Description                              | Example                       |
 | :---: | ----------------- | ---------------------------------------- | ----------------------------- |
 |   ✅   | `text-decoration` | Adds lines (`underline`, `line-through`) | `text-decoration: underline;` |
-|       | `text-shadow`     | Adds shadow to text                      | `text-shadow: 2px 2px #888;`  |
+|   ✅   | `text-shadow`     | Adds shadow to text                      | `text-shadow: 2px 2px #888;`  |
 |       | `white-space`     | Controls how white space is handled      | `white-space: nowrap;`        |
 |       | `overflow-wrap`   | Prevents text from overflowing           | `overflow-wrap: break-word;`  |
-|       | `direction`       | Sets text direction (`ltr`, `rtl`)       | `direction: rtl;`             |
+|   ✅   | `direction`       | Sets text direction (`ltr`, `rtl`)       | `direction: rtl;`             |
 
 ### 📦 **Box Model Properties**
 
 | Learn | Property     | Description                   | Example                    |
 | :---: | ------------ | ----------------------------- | -------------------------- |
 |   ✅   | `margin`     | Space outside the element     | `margin: 10px;`            |
-|       | `padding`    | Space inside the element      | `padding: 15px;`           |
-|       | `border`     | Border around the element     | `border: 1px solid black;` |
-|       | `width`      | Width of the element          | `width: 300px;`            |
-|       | `height`     | Height of the element         | `height: 200px;`           |
-|       | `box-sizing` | How dimensions are calculated | `box-sizing: border-box;`  |
+|   ✅   | `padding`    | Space inside the element      | `padding: 15px;`           |
+|   ✅   | `border`     | Border around the element     | `border: 1px solid black;` |
+|   ✅   | `width`      | Width of the element          | `width: 300px;`            |
+|   ✅   | `height`     | Height of the element         | `height: 200px;`           |
+|   ✅   | `box-sizing` | How dimensions are calculated | `box-sizing: border-box;`  |
 
 ### 📐 **Layout and Positioning**
 
 | Learn | Property                         | Description                                                      | Example               |
 | :---: | -------------------------------- | ---------------------------------------------------------------- | --------------------- |
-|       | `display`                        | Defines layout behavior (`block`, `flex`, etc.)                  | `display: flex;`      |
-|       | `position`                       | Controls positioning (`static`, `relative`, `absolute`, `fixed`) | `position: absolute;` |
-|       | `top`, `left`, `right`, `bottom` | Offsets for positioned elements                                  | `top: 20px;`          |
+|   ✅   | `display`                        | Defines layout behavior (`block`, `flex`, etc.)                  | `display: flex;`      |
+|   ✅   | `position`                       | Controls positioning (`static`, `relative`, `absolute`, `fixed`) | `position: absolute;` |
+|   ✅   | `top`, `left`, `right`, `bottom` | Offsets for positioned elements                                  | `top: 20px;`          |
 |       | `z-index`                        | Stack order (higher = on top)                                    | `z-index: 10;`        |
 |       | `float`                          | Floats element left or right                                     | `float: left;`        |
 |       | `clear`                          | Prevents float effects                                           | `clear: both;`        |
@@ -166,21 +166,21 @@ p {
 | Learn | Property           | Description                 | Example                             |
 | :---: | ------------------ | --------------------------- | ----------------------------------- |
 |   ✅   | `background-color` | Background color of element | `background-color: #eee;`           |
-|       | `background-image` | Image background            | `background-image: url('img.jpg');` |
-|       | `border-radius`    | Rounds the corners          | `border-radius: 8px;`               |
-|       | `box-shadow`       | Adds shadow to the box      | `box-shadow: 2px 2px 5px #aaa;`     |
-|       | `opacity`          | Transparency level (0–1)    | `opacity: 0.5;`                     |
+|   ✅   | `background-image` | Image background            | `background-image: url('img.jpg');` |
+|   ✅   | `border-radius`    | Rounds the corners          | `border-radius: 8px;`               |
+|   ✅   | `box-shadow`       | Adds shadow to the box      | `box-shadow: 2px 2px 5px #aaa;`     |
+|   ✅   | `opacity`          | Transparency level (0–1)    | `opacity: 0.5;`                     |
 
 ### 🎞️ **Transitions and Animation**
 
 | Learn | Property     | Description                      | Example                          |
 | :---: | ------------ | -------------------------------- | -------------------------------- |
-|       | `transition` | Smooth change of property values | `transition: all 0.3s;`          |
+|   ✅   | `transition` | Smooth change of property values | `transition: all 0.3s;`          |
 |       | `animation`  | Runs keyframe animations         | `animation: bounce 2s infinite;` |
 
 ---
 
-## 🎨 CSS Color System
+## CSS Color System
 CSS provides several ways to define colors when styling HTML elements. Understanding these systems helps you create visually appealing and accessible designs. Below are the most commonly used color formats in CSS.
 
 ### 1. **Named Colors**
@@ -188,7 +188,7 @@ CSS includes around 140 predefined **named colors** that are easy to use and rem
 
 #### ✅ Example Usage:
 
-```
+```css
 p {   
 	color: red; 
 }
@@ -226,7 +226,7 @@ p {
 
 #### ✅ Example Usage:
 
-```
+```css
 h1 {   
 	color: #ff0000;   /* Red */ 
 } 
@@ -259,7 +259,7 @@ Each parameter can be:
 
 #### ✅ Example Usage:
 
-```
+```css
 p {   
 	color: rgb(255, 0, 0);   /* Red */ 
 } 
@@ -285,7 +285,7 @@ rgba(red, green, blue, alpha)
 
 #### ✅ Example Usage:
 
-```
+```css
 .box {
 	background-color: rgba(255, 0, 0, 0.5);   /* Semi-transparent red */ 
 }
@@ -299,14 +299,22 @@ rgba(red, green, blue, alpha)
  
 - Hover effects, shadows, and overlays
 
-### 📌 Summary Table
+### 5. Opacity
+In **CSS**, the `opacity` property controls how transparent an element is.
+#### ✅ Syntax:
 
-|Format|Syntax Example|Transparency?|Easy to Use|Precision|
-|---|---|---|---|---|
-|Named|`color: blue;`|❌|✅✅✅|❌|
-|Hex|`color: #00ff00;`|❌ (but combine with opacity)|✅✅|✅✅✅|
-|RGB|`color: rgb(0, 0, 255);`|❌|✅✅|✅✅✅|
-|RGBA|`color: rgba(0, 0, 0, 0.3);`|✅|✅✅|✅✅✅|
+```css
+selector {   
+	opacity: value; 
+}
+```
+- **`value`** is a number between **0** (completely transparent) and **1** (completely opaque)
+
+#### ✅ Important Notes:
+
+- `opacity` affects the entire element **and all of its children**.
+
+- If you want only the background or a specific part to be transparent (not the text inside, for example), use `rgba()` for color instead.
 
 ---
 
@@ -361,11 +369,11 @@ These **scale** based on the context — like the font size of the parent or the
 
 - `fr` = "fractional unit" used in **CSS Grid Layout**
 
-```
+```css
 grid-template-columns: 1fr 2fr;  /* 1 part vs 2 parts */
 ```
 
-### ✅ Best Practices
+### Best Practices
 
 - Use `rem` or `em` for font sizes for better accessibility.
 
@@ -386,7 +394,7 @@ In CSS, **selectors** are patterns used to **target HTML elements** that you wan
 #### 1. Universal Selector
 Selects **all** elements:
 
-```
+```css
 * {   
 	margin: 0; 
 }
@@ -395,7 +403,7 @@ Selects **all** elements:
 #### 2. Type Selector
 Selects all elements of a given tag:
 
-```
+```css
 h1 {   
 	font-size: 2rem;
 }
@@ -404,37 +412,33 @@ h1 {
 #### 3. Class Selector
 Targets elements with a specific class:
 
-CSS:
-```
+```css
 .card {   
 	border: 1px solid #ccc; 
 }
 ```
 
-HTML:
-```
+```html
 <div class="card"></div>
 ```
 
 #### 4. ID Selector
 Targets an element with a specific ID:
 
-CSS:
-```
+```css
 #main-header {   
 	background-color: black; 
 }
 ```
 
-HTML:
-```
+```html
 <h1 id="main-header">Title</h1>
 ```
 
 #### 5. Group Selector
 Targets multiple selectors at once:
 
-```
+```css
 h1, 
 h2, 
 h3 {   
@@ -445,7 +449,7 @@ h3 {
 #### 6. Descendant Selector
 Targets elements **inside** other elements:
 
-```
+```css
 nav a {   
 	color: green; 
 }
@@ -454,7 +458,7 @@ nav a {
 #### 7. Child Combinator (`>`)
 Targets **direct children** only:
 
-```
+```css
 ul > li {   
 	list-style: square; 
 }
@@ -463,7 +467,7 @@ ul > li {
 #### 8. Adjacent Sibling Combinator (`+`)
 Selects an element **immediately after** another:
 
-```
+```css
 h1 + p {   
 	margin-top: 0; 
 }
@@ -472,7 +476,7 @@ h1 + p {
 #### 9. [Attribute Selector](https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors)
 Targets elements by their attributes:
 
-```
+```css
 input[type="text"] {   
 	border: 1px solid #999; 
 }
@@ -485,7 +489,7 @@ A **pseudo-class** is used to define the **special state** of an element. It **d
 
 ##### 📋 **Syntax:**
 
-```
+```css
 selector:pseudo-class {   
 	/* style rules */
 }
@@ -508,14 +512,14 @@ A **pseudo-element** allows you to **style specific parts** of an element or **i
 
 ##### 📋 **Syntax:**
 
-```
+```css
 selector::pseudo-element {   
 	/* style rules */ 
 }
 ```
 <mark style="background: #FFF3A3A6;"><b>Note:</b>Modern CSS uses <i>double colons (`::`)</i> to distinguish pseudo-elements from pseudo-classes, but older browsers still support single colons.</mark>
 
-### 🔸 Common Pseudo-Elements:
+##### 🔸 **Common Pseudo-Elements:**
 
 |Pseudo-Element|Description|Example|
 |---|---|---|
@@ -541,7 +545,7 @@ The **“C” in CSS** stands for **Cascading**. It describes how **multiple CSS
 
 4. **Source Order**: Last rule wins if specificity is equal
 
-### 🔶Example:
+#### 🔶Example:
 
 ```css
 /* Rule 1 */
@@ -595,7 +599,7 @@ It will override even inline styles and highly specific selectors — unless tho
 
 ==**Disclaimer:** ⚠️ *Use '! Important' sparingly* – it breaks the natural cascade and can make debugging harder.==
 
-### 🧠 Best Practices
+### Best Practices
 
 - Prefer **specific classes** over IDs in CSS (more reusable and easier to override).
 
@@ -610,10 +614,10 @@ It will override even inline styles and highly specific selectors — unless tho
 
 Just like in families, **child elements can inherit traits (styles)** from their parents — but **not all traits** are passed down automatically.
 
-### 🔶 How Inheritance Works
+### 👑 How Inheritance Works
 When you apply a property to a parent element, **only certain properties** will automatically be inherited by its children — usually those related to **text and appearance**.
 
-### ✅ Commonly Inherited Properties:
+### 📃 Commonly Inherited Properties:
 
 - `color`
 - `font-family`
@@ -628,7 +632,7 @@ When you apply a property to a parent element, **only certain properties** will 
 - `white-space`
 - `word-spacing`
 
-### ❌ Not Inherited by Default:
+### 🔶 Not Inherited by Default:
 
 - `margin`, `padding`, `border`
 - `width`, `height`
@@ -636,7 +640,7 @@ When you apply a property to a parent element, **only certain properties** will 
 - `position`, `display`
 - `flex`, `grid`, `z-index`
 
-### 🔶Forcing Inheritance
+### 🔶 Forcing Inheritance
 If a property is **not inherited by default**, you can make it inherit manually:
 
 ```css
@@ -647,9 +651,8 @@ div {
 
 This tells the child `<div>` to **explicitly copy** the background color from its parent.
 
-### Example:
+### ✅ Example:
 
-HTML:
 ```html
 <div class="parent">
   Parent Text
@@ -657,7 +660,6 @@ HTML:
 </div>
 ```
 
-CSS:
 ```css
 .parent {
   color: darkblue;
@@ -668,8 +670,508 @@ CSS:
   /* Inherits both 'color' and 'font-family' */
 }
 ```
-
 Result: Both the parent and child text will appear in **dark blue Arial**.
 
 ---
 
+## Box Model in CSS
+The **Box Model** in CSS is a fundamental concept that describes how elements on a web page are structured and how spacing and sizing work. Every HTML element is essentially a rectangular box, and the CSS box model defines how the size of that box is calculated.
+
+### Parts of the Box Model
+
+1. **Content**
+    
+    - The actual content of the box (text, image, etc.)
+    
+    - Controlled by properties like `width` and `height`.
+
+2. **Padding**
+    
+    - Space between the content and the border.
+    
+    - Adds spacing _inside_ the element.
+    
+    - Controlled by `padding`, `padding-top`, `padding-right`, etc.
+
+3. **Border**
+    
+    - Surrounds the padding (if any) and content.
+    
+    - Controlled by `border`, `border-width`, `border-style`, etc.
+
+4. **Margin**
+    
+    - Space _outside_ the border, separating the element from others.
+    
+    - Controlled by `margin`, `margin-top`, `margin-right`, etc.
+
+### Visual Representation
+
+![[Screenshot From 2025-06-22 11-57-55.png]]
+### Box Model Properties
+
+#### 1. `Height` & `Width` property:
+In the **CSS box model**, the `height` and `width` properties define the size of the **content area** of an element — **not including** padding, border, or margin **unless** otherwise specified.
+
+##### 📐 **How `height` and  `width` Work:**
+
+```css
+.box {
+  width: 200px;
+  height: 100px;
+}
+```
+
+This sets the **content area** to `200px` wide and `100px` tall. Padding, border, and margin are **added on top** of that.
+
+##### 🧮 **Total Element Size (default box model):**
+By default (`box-sizing: content-box`), total size:
+
+```
+Total width  = width + padding-left + padding-right + border-left + border-right
+Total height = height + padding-top + padding-bottom + border-top + border-bottom
+```
+
+##### ✅ **Using `box-sizing: border-box`**
+To make the `width` and `height` include padding and border:
+
+```css
+.box {
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+  border: 5px solid black;
+  box-sizing: border-box;
+}
+```
+
+Now, the total size stays at `200×100px`, and the content shrinks to make room for padding and border.
+
+#### Border Property:
+In the **CSS box model**, the `border` is the layer **between the padding and the margin**. It visually wraps the content and padding, and it **adds to the total size of the element** (unless `box-sizing: border-box` is used).
+
+You can define borders using individual properties or shorthand.
+
+##### 🧱 **Basic Border Properties:**
+
+```css
+border-width: 2px;      /* thickness */
+border-style: solid;    /* type: solid, dashed, dotted, etc. */
+border-color: black;    /* color */
+```
+
+Or use shorthand:
+
+```css
+border: 2px solid black;
+```
+
+##### 🔶 **Side-Specific Borders**
+You can target each side independently:
+
+```css
+border-top: 1px solid red;
+border-right: 2px dashed green;
+border-bottom: 3px dotted blue;
+border-left: 4px double orange;
+```
+
+##### 🎨 **Border Variants**
+
+- `border-style` options:  
+    `none`, `solid`, `dashed`, `dotted`, `double`, `groove`, `ridge`, `inset`, `outset`
+
+- `border-radius`: adds rounded corners
+
+```css
+border-radius: 8px;
+```
+There are also corner specific `border-radius`.
+
+- For a **perfect circle**:
+    
+    - The element must have equal `width` and `height`.
+    
+    - Use `border-radius: 50%`.
+
+```css
+.circle {   
+	width: 100px;   
+	height: 100px;   
+	border-radius: 50%;   
+	background: red; 
+}
+```
+
+- For an **oval**:
+
+```css
+oval {   
+	width: 200px;   
+	height: 100px;   
+	border-radius: 50%;   
+	background: blue; 
+}
+```
+
+- For an **Ellipse**:
+
+```css
+border-radius: 50px 25px;
+```
+
+#### Padding property:
+The `padding` property in CSS controls the **space between the content of an element and its border**. It’s **inside** the border, unlike `margin` which is on the **outside**.
+
+##### ✅ **Basic Syntax**
+
+```css
+selector {
+  padding: 20px;
+}
+```
+This adds `20px` **of space on all four sides** (top, right, bottom, left).
+
+Or use shorthand:
+
+```css
+padding: top right bottom left;
+```
+
+You can define 1 to 4 values:
+
+| Syntax                         | Meaning                                         |
+| ------------------------------ | ----------------------------------------------- |
+| `padding: 20px;`               | All sides: 20px                                 |
+| `padding: 10px 20px;`          | Top/bottom: 10px, left/right: 20px              |
+| `padding: 10px 15px 20px;`     | Top: 10px, left/right: 15px, bottom: 20px       |
+| `padding: 5px 10px 15px 20px;` | Top: 5px, Right: 10px, Bottom: 15px, Left: 20px |
+
+##### 🔶 **Individual Sides**
+
+```css
+padding-top: 10px;
+padding-right: 20px;
+padding-bottom: 15px;
+padding-left: 5px;
+```
+
+#### Margin property:
+The `margin` property in CSS controls the **space _outside_ an element**, between its border and the elements around it. It’s part of the **CSS box model**, just like `padding`, `border`, and `width/height`.
+
+##### ✅ **Basic Syntax**
+
+```css
+selector {
+  margin: 20px;
+}
+```
+This applies a `20px ` **margin on all four sides**: top, right, bottom, and left.
+
+Or use shorthand:
+
+```css
+margin: top right bottom left;
+```
+
+You can use 1 to 4 values:
+
+|Syntax|Result|
+|---|---|
+|`margin: 20px;`|All four sides = 20px|
+|`margin: 10px 20px;`|Top/bottom = 10px, Left/right = 20px|
+|`margin: 10px 15px 20px;`|Top = 10px, Left/right = 15px, Bottom = 20px|
+|`margin: 5px 10px 15px 20px;`|Top, Right, Bottom, Left (clockwise order)|
+
+##### 🔶 **Individual Sides**
+
+```css
+margin-top: 10px;
+margin-right: 15px;
+margin-bottom: 10px;
+margin-left: 5px;
+```
+
+##### 🔁 **Auto Margin**
+You can center a block element horizontally using `auto`:
+
+```css
+margin: 0 auto;
+```
+This sets top/bottom to `0` and **left/right to auto**, which centers the element if it has a fixed `width`.
+
+##### 🧱 **Box Model Context**
+
+- `margin` is **outside the border**.
+
+- It does **not affect content size**.
+
+- Margins can **collapse** (especially vertical margins between block elements).
+
+#### Display Property:
+The `display` property in CSS controls **how an element is displayed** on the page — it defines the element’s **layout behavior** in the document flow.
+
+##### ✅ **Common `display` Values**
+
+|Value|Description|
+|---|---|
+|`block`|Element takes full width, starts on a new line|
+|`inline`|Element flows with text, no line break, width/height can't be set|
+|`inline-block`|Like `inline`, but you can set width/height|
+|`none`|Hides the element (removes it from the layout)|
+|`flex`|Enables Flexbox layout (for flexible, 1D layouts)|
+|`grid`|Enables Grid layout (for 2D layouts)|
+|`inline-flex`|Flex layout, behaves like inline element|
+|`inline-grid`|Grid layout, behaves like inline element|
+
+---
+
+## Transition in CSS
+In **CSS**, the `transition` property allows you to smoothly animate changes to CSS properties over a set duration.
+
+### ✅ Basic Syntax:
+
+```css
+selector {
+  transition: property duration timing-function delay;
+}
+```
+
+- **`property`** – the CSS property to animate (e.g., `opacity`, `background-color`, `transform`)
+
+- **`duration`** – how long the transition lasts (e.g., `0.5s`, `200ms`)
+
+- **`timing-function`** _(optional)_ – the speed curve (`ease`, `linear`, `ease-in`, `ease-out`, `ease-in-out`)
+
+- **`delay`** _(optional)_ – time before the animation starts
+
+### ✅ Example – Smooth Hover Effect:
+
+```css
+.button {
+  background-color: blue;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: darkblue;
+}
+```
+
+### 🔶 Transitioning Multiple Properties:
+
+```css
+.box {
+  transition: width 0.5s, height 0.5s, background-color 0.3s;
+}
+```
+
+### 📃 Common Timing Functions:
+
+- `ease` _(default)_ – starts slow, speeds up, then slows down
+ 
+- `linear` – constant speed
+
+- `ease-in` – starts slow
+
+- `ease-out` – ends slow
+
+- `ease-in-out` – starts and ends slow
+
+### 🔶 All Properties (not recommended for performance):
+
+```css
+transition: all 0.3s ease;
+```
+
+---
+
+## Transform In CSS
+In **CSS**, the `transform` property allows you to visually manipulate elements—like moving, scaling, rotating, or skewing—without affecting the document layout.
+
+### ✅ Basic Syntax:
+
+```css
+selector {
+  transform: function(value);
+}
+```
+
+You can chain multiple functions like:
+
+```css
+transform: rotate(45deg) scale(1.2) translateX(50px);
+```
+
+### 📃 Common Transform Functions:
+
+|Function|Description|Example|
+|---|---|---|
+|`translateX(x)`|Moves element horizontally|`translateX(100px)`|
+|`translateY(y)`|Moves element vertically|`translateY(-50%)`|
+|`translate(x, y)`|Moves element in both directions|`translate(10px, 20px)`|
+|`scale(s)`|Scales both width and height|`scale(1.5)`|
+|`scaleX(x)`|Scales width only|`scaleX(2)`|
+|`scaleY(y)`|Scales height only|`scaleY(0.5)`|
+|`rotate(angle)`|Rotates element (clockwise)|`rotate(45deg)`|
+|`skewX(angle)`|Skews horizontally|`skewX(15deg)`|
+|`skewY(angle)`|Skews vertically|`skewY(-10deg)`|
+|`matrix(...)`|Advanced 2D transforms|(rarely used manually)|
+
+### ✅ Example – Hover with Scale and Rotate:
+
+```css
+.card {
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  transform: scale(1.05) rotate(3deg);
+}
+```
+
+### 🔶 Note:
+
+- Transforms do **not** move other elements around them.
+
+- You can **combine `transform` with `transition`** for smooth animations.
+
+---
+
+## Position properties in CSS
+In **CSS**, the `position` property defines **how an element is positioned in the document**, and it determines how properties like `top`, `left`, `right`, and `bottom` affect it.
+
+### Position Values:
+
+#### 1. `static` (default)
+
+- Normal flow — no `top/left/right/bottom` effects.
+
+```css
+.element {
+  position: static;
+}
+```
+
+#### 2. `relative`
+
+- Element stays in the flow **but can be offset**.
+
+```css
+.element {
+  position: relative;
+  top: 10px; /* moves down 10px from its normal spot */
+}
+```
+
+#### 3. `absolute`
+
+- **Removed from normal flow** and **positioned relative to the nearest positioned ancestor** (not `static`).
+
+```css
+.parent {
+  position: relative;
+}
+.child {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+```
+
+#### 4. `fixed`
+
+- **Removed from flow** and positioned **relative to the viewport**. Doesn't scroll with the page.
+
+```css
+.banner {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+```
+
+#### 5. `sticky`
+
+- Behaves like `relative` until a scroll threshold is reached, then behaves like `fixed`.
+
+```css
+.header {
+  position: sticky;
+  top: 0;
+  background: white;
+}
+```
+
+### Example: Absolute Inside Relative
+
+```html
+<div class="container">
+  <div class="box">I'm positioned!</div>
+</div>
+```
+
+```css
+.container {
+  position: relative;
+}
+.box {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+}
+```
+
+---
+
+## Shadows in CSS
+In **CSS**, "shadow" usually refers to two main types:
+
+1. **Text Shadow** (`text-shadow`)
+
+2. **Box Shadow** (`box-shadow`)
+
+### 1. `text-shadow`
+Applies a shadow to text.
+
+#### ✅ Syntax:
+
+```css
+text-shadow: x-offset y-offset blur-radius color;
+```
+
+#### ✅ Example:
+
+```css
+h1 {
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+```
+
+- `2px 2px` → shadow moves right and down
+
+- `5px` → blur radius
+
+- `rgba(...)` → color with transparency
+
+### 2. `box-shadow`
+Applies a shadow to the **outside (or inside)** of a box element.
+
+#### ✅ Syntax:
+
+```css
+box-shadow: x-offset y-offset blur-radius spread-radius color;
+```
+
+- `x-offset`: horizontal shift
+
+- `y-offset`: vertical shift
+
+- `blur-radius`: how soft the shadow edge is
+
+- `spread-radius` _(optional)_: how far it grows/shrinks
+
+- `inset` _(optional)_: makes the shadow appear inside the box
+
+---
