--- a/📔Notes/3. CSS Notes.md
+++ b/📔Notes/3. CSS Notes.md
@@ -1175,3 +1175,68 @@ box-shadow: x-offset y-offset blur-radius spread-radius color;
 - `inset` _(optional)_: makes the shadow appear inside the box
 
 ---
+
+## [[CSS-flexbox.pdf|Flexbox in CSS]]
+**Flexbox** in CSS (short for **Flexible Box Layout**) is a layout model designed to arrange items in a one-dimensional space—either **row-wise** or **column-wise**—in a more efficient way than traditional layouts.
+
+### Basic Concepts
+To use Flexbox, you start by setting a container's display to `flex`:
+
+```css
+.container {
+  display: flex;
+}
+```
+
+### Main Properties
+
+#### On the Flex Container
+
+| Property          | Description                                                                                                           |
+| ----------------- | --------------------------------------------------------------------------------------------------------------------- |
+| `flex-direction`  | Sets the direction of the main axis: `row`, `row-reverse`, `column`, `column-reverse`                                 |
+| `justify-content` | Aligns items along the main axis: `flex-start`, `center`, `flex-end`, `space-between`, `space-around`, `space-evenly` |
+| `align-items`     | Aligns items along the cross axis: `stretch`, `center`, `flex-start`, `flex-end`, `baseline`                          |
+| `align-content`   | Aligns multiple lines (when wrapping): same options as `align-items`                                                  |
+| `flex-wrap`       | Allows wrapping: `nowrap`, `wrap`, `wrap-reverse`                                                                     |
+| `gap`             | Adds spacing between flex items                                                                                       |
+
+#### On the Flex Items
+
+| Property      | Description                                                                             |
+| ------------- | --------------------------------------------------------------------------------------- |
+| `flex`        | Shorthand for `flex-grow`, `flex-shrink`, and `flex-basis`                              |
+| `flex-grow`   | How much a flex item will grow relative to the others (It's a ratio with other items)   |
+| `flex-shrink` | How much a flex item will shrink relative to the others (It's a ratio with other items) |
+| `flex-basis`  | Initial size of the flex item before growing/shrinking                                  |
+| `align-self`  | Overrides `align-items` for an individual item                                          |
+| `order`       | Changes the order in which items appear in the flex container                           |
+##### Shorthand for flex items
+
+![[Screenshot From 2025-06-25 19-52-27.png]]
+
+### Example
+
+```html
+<div class="container">
+  <div class="item">1</div>
+  <div class="item">2</div>
+  <div class="item">3</div>
+</div>
+```
+
+```css
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+.item {
+  background: #ccc;
+  padding: 20px;
+  flex: 1;
+}
+```
